--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,4 +2,10 @@
 
 <p><%= @article.body %></p>
 
-<%= link_to "Back to All Articles", articles_path %>
+<ul>
+  <li><%= link_to "Edit", edit_article_path(@article) %></li>
+    <li><%= link_to "Destroy", article_path(@article),
+                  method: :delete,
+                  data: { confirm: "Are you sure?" } %></li>
+  <li><%= link_to "Back to all articles", articles_path %></li>
+</ul>
